# dotfiles

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  bootstrap-cloud.sh  bootstrap.sh  todo.md
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: tests.yml
claude/: .gitignore  CLAUDE.md  operating-principles.md  orchestrator.conf  settings.json.tmpl  statusline.js
claude/agents/: architecture-reviewer.md  bug-finder.md  completeness-reviewer.md  doc-implementer.md  doc-reviewer.md
claude/commands/: arch-review.md  arewedone.md  bugs.md  checks.md  commit.md  dev-review.md  doc.md  done.md  explain.md  handoff.md  jira.md  kickoff.md  lint.md  pr.md  ready.md  rebase.md  refresh.md  start.md  status.md  switch.md  test.md  worktree.md
claude/hooks/: account_guard.py  block_secrets.py  cache_jira_url.py  claude-hooks.test.sh  commit_guard.py  emoji_guard.py  exec_route.py  format_files.py  no_ai_attribution_bash.py  no_ai_comments.py  protect_claude_md.py  tiered_orchestrator.py
claude/rules/: .gitignore
claude/skills/: .gitignore  skills.test.sh
codex/: AGENTS.md
codex/hooks/: block_secrets.py  codex-hooks.test.sh  emoji_guard.py  no_ai_attribution_bash.py  no_ai_comments.py
ghostty/: config
git/: .gitconfig  .gitignore_global
git/hooks/: commit-msg  (+8 more)
install/: claude-links.test.sh  install.sh  install.test.sh
templates/python/: pyproject.toml
vscode/: extensions.txt  keybindings.json  settings.json  welcomePage.js
zsh/: .trippy.toml  .zprofile  .zshrc  aliases.zsh  functions.test.sh  functions.zsh  theme.zsh
(+76 files in other folders)
